@@ -49,7 +49,7 @@ static InstanceJSObjectMap cachedObjects;
 // Derived RuntimeObject
 class QtRuntimeObjectImp : public RuntimeObjectImp {
     public:
-        QtRuntimeObjectImp(ExecState* exec, PassRefPtr<Instance>);
+        QtRuntimeObjectImp(ExecState*, PassRefPtr<StructureID>, PassRefPtr<Instance>);
         ~QtRuntimeObjectImp();
         virtual void invalidate();
 
@@ -67,8 +67,8 @@ class QtRuntimeObjectImp : public RuntimeObjectImp {
         void removeFromCache();
 };
 
-QtRuntimeObjectImp::QtRuntimeObjectImp(ExecState* exec, PassRefPtr<Instance> instance)
-    : RuntimeObjectImp(exec, instance)
+QtRuntimeObjectImp::QtRuntimeObjectImp(ExecState* exec, PassRefPtr<StructureID> structure, PassRefPtr<Instance> instance)
+    : RuntimeObjectImp(exec, structure, instance)
 {
 }
 
@@ -171,7 +171,7 @@ RuntimeObjectImp* QtInstance::getRuntimeObject(ExecState* exec, PassRefPtr<QtIns
     QtInstance* qtInstance = instance.get();
     RuntimeObjectImp* ret = static_cast<RuntimeObjectImp*>(cachedObjects.value(qtInstance));
     if (!ret) {
-        ret = new (exec) QtRuntimeObjectImp(exec, instance);
+        ret = new (exec) QtRuntimeObjectImp(exec, getDOMStructure<QtRuntimeObjectImp>(exec), instance);
         cachedObjects.insert(qtInstance, ret);
         ret = static_cast<RuntimeObjectImp*>(cachedObjects.value(qtInstance));
     }
